--- a/salonAnanas/MainWindow.xaml
+++ b/salonAnanas/MainWindow.xaml
@@ -7,6 +7,31 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid>
+            <Button x:Name="BtnBack" Click="BtnBack_Click"
+                    HorizontalAlignment="Right"
+                    Width="100"
+                    Height="30">Back</Button>
+            <TextBlock HorizontalAlignment="Center"
+                     VerticalAlignment="Center"
+                       Text="{Binding ElementName=MainFrame, Path=Content.Title}"></TextBlock>
+            <StackPanel Orientation="Horizontal">
+                <Image Source="Resources/beauty_logo.png" Margin="10"></Image>
+                <TextBlock VerticalAlignment="Center">
+                    Beauty salon "Muzzle"
+                </TextBlock>
+            </StackPanel>
+        </Grid>
+        <Frame x:Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden"
+                ContentRendered="MainFrame_ContentRendered"></Frame>
+        <Rectangle Grid.Row="2" Fill="{StaticResource ColorMain}"></Rectangle>
+
     </Grid>
+  
 </Window>
